Package with Rolldown (#489)
* Use unbuild for packaging

* Package with Rolldown

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,6 +2,7 @@
   "name": "@terrazzo/cli",
   "version": "0.7.4",
   "description": "CLI for managing design tokens using the Design Tokens Community Group (DTCG) standard and generating code for any platform via plugins.",
+  "license": "MIT",
   "type": "module",
   "author": {
     "name": "Drew Powers",
@@ -21,11 +22,7 @@
   ],
   "main": "./dist/index.js",
   "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
-    },
-    "./README.md": "./README.md",
+    ".": "./dist/index.js",
     "./package.json": "./package.json"
   },
   "homepage": "https://terrazzo.app/docs/cli",
@@ -34,17 +31,15 @@
     "url": "https://github.com/terrazzoapp/terrazzo.git",
     "directory": "./packages/cli/"
   },
-  "license": "MIT",
   "bin": {
     "tz": "bin/cli.js",
     "terrazzo": "bin/cli.js"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.build.json && pnpm run build:lab",
-    "build:lab": "vite build",
-    "dev": "tsc -p tsconfig.build.json -w",
+    "build": "rolldown -c && attw --profile esm-only --pack . && vite build",
+    "dev": "rolldown -c -w",
     "format": "biome check --fix --unsafe .",
-    "lint": "pnpm --filter @terrazzo/cli run \"/^lint:.*/\"",
+    "lint": "pnpm --filter @terrazzo/cli run \"/^lint:(js|ts)/\"",
     "lint:js": "biome check .",
     "lint:ts": "tsc --noEmit",
     "test": "vitest run"
