--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "version": "pnpm run build && changeset version"
   },
   "devDependencies": {
+    "@arethetypeswrong/cli": "^0.18.1",
     "@biomejs/biome": "1.9.4",
     "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.29.4",
     "@types/node": "^22.15.29",
     "execa": "^9.6.0",
     "prettier": "^3.5.3",
+    "rolldown": "1.0.0-beta.10",
+    "rolldown-plugin-dts": "^0.13.7",
     "strip-ansi": "^7.1.0",
     "stylelint": "^16.20.0",
     "stylelint-config-standard": "^36.0.1",
