--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -2,6 +2,7 @@
   "name": "@terrazzo/parser",
   "version": "0.7.3",
   "description": "Parser/validator for the Design Tokens Community Group (DTCG) standard.",
+  "license": "MIT",
   "type": "module",
   "author": {
     "name": "Drew Powers",
@@ -22,17 +23,22 @@
     "lint"
   ],
   "main": "./dist/index.js",
+  "exports": {
+    ".": "./dist/index.js",
+    "./package.json": "./package.json"
+  },
   "homepage": "https://terrazzo.app/docs/cli/api/js",
   "repository": {
     "type": "git",
     "url": "https://github.com/terrazzoapp/terrazzo.git",
     "directory": "./packages/parser/"
   },
-  "license": "MIT",
   "scripts": {
-    "build": "tsc -p tsconfig.build.json",
+    "build": "rolldown -c && attw --profile esm-only --pack .",
     "dev": "pnpm run build --watch",
-    "lint": "biome check .",
+    "lint": "pnpm --filter @terrazzo/parser run \"/^lint:(js|ts)/\"",
+    "lint:js": "biome check .",
+    "lint:ts": "tsc --noEmit",
     "test": "vitest run"
   },
   "dependencies": {
@@ -41,12 +47,10 @@
     "@types/babel__code-frame": "^7.0.6",
     "@types/culori": "^4.0.0",
     "culori": "^4.0.1",
-    "is-what": "^4.1.16",
     "merge-anything": "^5.1.7",
     "picocolors": "^1.1.1",
     "scule": "^1.3.0",
-    "wildcard-match": "^5.1.4",
-    "yaml": "^2.8.0"
+    "wildcard-match": "^5.1.4"
   },
   "devDependencies": {
     "yaml-to-momoa": "^0.0.3"
