--- a/packages/plugin-vanilla-extract/biome.json
+++ b/packages/plugin-vanilla-extract/biome.json
@@ -2,6 +2,7 @@
   "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
   "extends": ["../../biome.json"],
   "files": {
-    "include": ["./src/", "./test/*.test.*"]
+    "include": ["./src/", "./test/*.test.*"],
+    "ignore": ["./test/fixtures/**"]
   }
 }
