--- a/packages/cli/biome.json
+++ b/packages/cli/biome.json
@@ -2,7 +2,7 @@
   "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
   "extends": ["../../biome.json"],
   "files": {
-    "include": ["./bin/", "./src/", "./test/", "*.tsx"]
+    "include": ["./bin/", "./src/", "./test/*.test.ts", "*.tsx"]
   },
   "linter": {
     "rules": {
