--- a/packages/parser/biome.json
+++ b/packages/parser/biome.json
@@ -2,7 +2,7 @@
   "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
   "extends": ["../../biome.json"],
   "files": {
-    "include": ["./src/", "./test/"]
+    "include": ["./src/", "./test/*.test.*"]
   },
   "linter": {
     "rules": {
