--- a/packages/plugin-vanilla-extract/package.json
+++ b/packages/plugin-vanilla-extract/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@terrazzo/plugin-css",
-  "version": "0.8.0",
-  "description": "Convert DTCG design tokens JSON into CSS variables for use in any web application or native app with webview.",
+  "name": "@terrazzo/plugin-vanilla-extract",
+  "version": "0.0.1",
+  "description": "Generate Vanilla Extract themes from DTCG design tokens.",
   "license": "MIT",
   "type": "module",
   "author": {
@@ -13,37 +13,47 @@
     "design system",
     "dtcg",
     "w3c",
-    "css"
+    "css",
+    "vanilla extract"
   ],
   "main": "./dist/index.js",
   "exports": {
     ".": "./dist/index.js",
     "./package.json": "./package.json"
   },
-  "homepage": "https://terrazzo.app/docs/cli/integrations/css",
+  "homepage": "https://terrazzo.app/docs/cli/integrations/vanilla-extract",
   "repository": {
     "type": "git",
     "url": "https://github.com/terrazzoapp/terrazzo.git",
-    "directory": "./packages/plugin-css/"
+    "directory": "./packages/plugin-vanilla-extract/"
   },
   "scripts": {
     "build": "rolldown -c && attw --profile esm-only --pack .",
     "dev": "rolldown -c -w",
     "format": "biome check --fix --unsafe .",
-    "lint": "pnpm --filter @terrazzo/plugin-css run \"/^lint:(js|ts)/\"",
+    "lint": "pnpm --filter @terrazzo/plugin-vanilla-extract run \"/^lint:(js|ts)/\"",
     "lint:js": "biome check .",
     "lint:ts": "tsc --noEmit",
     "test": "vitest run"
   },
   "peerDependencies": {
-    "@terrazzo/cli": "^0.8.0"
-  },
-  "dependencies": {
-    "@terrazzo/token-tools": "workspace:^"
+    "@terrazzo/cli": "^0.8.0",
+    "@terrazzo/plugin-css": "^0.8.0"
   },
   "devDependencies": {
     "@terrazzo/cli": "workspace:^",
     "@terrazzo/parser": "workspace:^",
-    "dtcg-examples": "^0.3.3"
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.6",
+    "@vanilla-extract/css": "^1.17.2",
+    "@vanilla-extract/vite-plugin": "^5.0.3",
+    "dtcg-examples": "^0.3.3",
+    "execa": "^9.6.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "vite": "^6.3.5"
+  },
+  "dependencies": {
+    "scule": "^1.3.0"
   }
 }
