--- a/packages/token-tools/biome.json
+++ b/packages/token-tools/biome.json
@@ -2,6 +2,6 @@
   "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
   "extends": ["../../biome.json"],
   "files": {
-    "include": ["./src/", "./test/"]
+    "include": ["./src/", "./test/*.test.*"]
   }
 }
