--- a/packages/use-color/package.json
+++ b/packages/use-color/package.json
@@ -17,7 +17,7 @@
     "directory": "./packages/use-color/"
   },
   "scripts": {
-    "build": "tsc --noEmit && size-limit",
+    "build": "tsc --noEmit && size-limit && attw --profile esm-only --pack .",
     "format": "biome check --fix --unsafe .",
     "lint": "biome check .",
     "test": "vitest run"
