--- a/packages/plugin-sass/package.json
+++ b/packages/plugin-sass/package.json
@@ -40,7 +40,8 @@
     "@terrazzo/plugin-css": "^0.8.0"
   },
   "dependencies": {
-    "@terrazzo/token-tools": "workspace:^"
+    "@terrazzo/token-tools": "workspace:^",
+    "wildcard-match": "^5.1.4"
   },
   "devDependencies": {
     "@terrazzo/cli": "workspace:^",
