--- a/packages/plugin-js/package.json
+++ b/packages/plugin-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@terrazzo/plugin-js",
-  "version": "1.0.0",
+  "version": "0.9.0",
   "description": "Generate JS, TS, and JSON from your DTCG design tokens JSON.",
   "license": "MIT",
   "type": "module",
@@ -37,7 +37,7 @@
     "test": "vitest run"
   },
   "peerDependencies": {
-    "@terrazzo/cli": "^0.9.0"
+    "@terrazzo/cli": "workspace:^"
   },
   "dependencies": {
     "@terrazzo/token-tools": "workspace:^"
