--- a/packages/plugin-sass/package.json
+++ b/packages/plugin-sass/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@terrazzo/plugin-sass",
-  "version": "1.0.0",
+  "version": "0.9.0",
   "description": "Generate .scss from your DTCG design tokens JSON.",
   "license": "MIT",
   "type": "module",
@@ -36,8 +36,8 @@
     "test": "vitest run"
   },
   "peerDependencies": {
-    "@terrazzo/cli": "^0.9.0",
-    "@terrazzo/plugin-css": "^1.0.0"
+    "@terrazzo/cli": "workspace:^",
+    "@terrazzo/plugin-css": "workspace:^"
   },
   "dependencies": {
     "@terrazzo/token-tools": "workspace:^",
