--- a/packages/plugin-swift/package.json
+++ b/packages/plugin-swift/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@terrazzo/plugin-swift",
-  "version": "1.0.0",
+  "version": "0.2.0",
   "description": "Generate Swift code using DTCG design tokens JSON.",
   "license": "MIT",
   "type": "module",
@@ -35,7 +35,7 @@
     "test": "vitest run"
   },
   "peerDependencies": {
-    "@terrazzo/cli": "^0.9.0"
+    "@terrazzo/cli": "workspace:^"
   },
   "dependencies": {
     "@terrazzo/token-tools": "workspace:^",
