--- a/packages/plugin-tailwind/package.json
+++ b/packages/plugin-tailwind/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@terrazzo/plugin-tailwind",
-  "version": "1.0.0",
+  "version": "0.2.0",
   "description": "Generate Tailwind v4 theme using DTCG design tokens.",
   "license": "MIT",
   "type": "module",
@@ -36,8 +36,8 @@
     "test": "vitest run"
   },
   "peerDependencies": {
-    "@terrazzo/cli": "^0.9.0",
-    "@terrazzo/plugin-css": "^1.0.0",
+    "@terrazzo/cli": "workspace:^",
+    "@terrazzo/plugin-css": "workspace:^",
     "tailwindcss": "^4.0.0"
   },
   "dependencies": {
