--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -63,8 +63,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.10.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "vite": "^6.3.5"
   }
 }
