--- a/www/package.json
+++ b/www/package.json
@@ -19,27 +19,27 @@
     "@terrazzo/token-lab": "workspace:^",
     "@terrazzo/tokens": "workspace:^",
     "@terrazzo/use-color": "workspace:^",
-    "algoliasearch": "^5.27.0",
+    "algoliasearch": "^5.34.0",
     "nanoid": "^5.1.5",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-instantsearch": "^7.15.8",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-instantsearch": "^7.16.1",
     "shiki": "^1.29.2"
   },
   "devDependencies": {
-    "@astrojs/mdx": "^4.3.0",
+    "@astrojs/mdx": "^4.3.1",
     "@astrojs/react": "4.1.2",
     "@astrojs/sitemap": "^3.4.1",
     "@terrazzo/storybook": "workspace:^",
-    "@types/react": "^19.1.6",
+    "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "astro": "^5.9.1",
+    "astro": "^5.12.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-directive": "^3.0.1",
     "sharp": "^0.33.5",
     "unist-util-visit": "^5.0.0",
-    "vite": "^6.3.5",
+    "vite": "^7.0.5",
     "vite-plugin-sass-dts": "^1.3.31",
     "vite-tsconfig-paths": "^5.1.4"
   }
