--- a/packages/react-color-picker/biome.json
+++ b/packages/react-color-picker/biome.json
@@ -1,11 +1,11 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-  "extends": ["../../biome.json"],
-  "linter": {
-    "rules": {
-      "correctness": {
-        "useHookAtTopLevel": "off"
-      }
-    }
-  }
+	"$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
+	"extends": "//",
+	"linter": {
+		"rules": {
+			"correctness": {
+				"useHookAtTopLevel": "off"
+			}
+		}
+	}
 }
