--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,9 +2,15 @@ shellEmulator: true
 packages:
   - packages/**
   - www
-  - '!packages/**/test/**'
+  - "!packages/**/test/**"
 onlyBuiltDependencies:
-  - '@biomejs/biome'
-  - '@swc/core'
+  - "@biomejs/biome"
+  - "@swc/core"
   - esbuild
   - sharp
+catalog:
+  "@vitejs/plugin-react-swc": ^3.11.0
+  react: ^19.1.0
+  react-dom: ^19.1.0
+  vite: ^7.0.5
+  vitest: ^3.2.4
