--- a/package.json
+++ b/package.json
@@ -17,21 +17,22 @@
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.18.2",
-    "@biomejs/biome": "1.9.4",
+    "@biomejs/biome": "^2.1.2",
     "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.29.5",
     "@types/node": "^22.16.5",
     "execa": "^9.6.0",
     "prettier": "^3.6.2",
-    "rolldown": "1.0.0-beta.10",
-    "rolldown-plugin-dts": "^0.13.14",
+    "rolldown": "1.0.0-beta.28",
+    "rolldown-plugin-dts": "^0.14.1",
     "strip-ansi": "^7.1.0",
     "stylelint": "^16.22.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "^6.0.4",
     "turbo": "^2.5.5",
     "typescript": "^5.8.3",
-    "vitest": "^3.2.4"
+    "vite": "catalog:",
+    "vitest": "catalog:"
   },
   "pnpm": {
     "patchedDependencies": {
