--- a/packages/cli/biome.json
+++ b/packages/cli/biome.json
@@ -1,8 +1,8 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-  "extends": ["../../biome.json"],
+  "$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
+  "extends": "//",
   "files": {
-    "include": ["./bin/", "./src/", "./test/*.test.ts", "*.tsx"]
+    "includes": ["bin/**", "src/**", "test/**/*.test.ts", "**/*.tsx"]
   },
   "linter": {
     "rules": {
@@ -13,7 +13,7 @@
   },
   "overrides": [
     {
-      "include": ["./bin/cli.js"],
+      "includes": ["./bin/cli.js"],
       "linter": {
         "rules": {
           "suspicious": {
