--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -62,9 +62,8 @@
     "yaml-to-momoa": "^0.0.6"
   },
   "devDependencies": {
-    "@vitejs/plugin-react-swc": "^3.10.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "vite": "^6.3.5"
+    "@vitejs/plugin-react-swc": "catalog:",
+    "react": "catalog:",
+    "react-dom": "catalog:"
   }
 }
