--- a/packages/fonts/biome.json
+++ b/packages/fonts/biome.json
@@ -1,4 +1,4 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-  "extends": ["../../biome.json"]
+	"$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
+	"extends": "//"
 }
