--- a/packages/parser/biome.json
+++ b/packages/parser/biome.json
@@ -1,8 +1,8 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-  "extends": ["../../biome.json"],
+  "$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
+  "extends": "//",
   "files": {
-    "include": ["./src/", "./test/*.test.*"]
+    "includes": ["src/**", "test/**/*.test.*"]
   },
   "linter": {
     "rules": {
