--- a/packages/plugin-vanilla-extract/biome.json
+++ b/packages/plugin-vanilla-extract/biome.json
@@ -1,8 +1,7 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-  "extends": ["../../biome.json"],
+  "$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
+  "extends": "//",
   "files": {
-    "include": ["./src/", "./test/*.test.*"],
-    "ignore": ["./test/fixtures/**"]
+    "includes": ["src/**", "test/**/*.test.*", "!test/fixtures/**"]
   }
 }
