--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -28,10 +28,9 @@
     "@types/culori": "^4.0.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react-swc": "^3.11.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "storybook": "^9.0.17",
-    "vite": "^7.0.5"
+    "@vitejs/plugin-react-swc": "catalog:",
+    "react": "catalog:",
+    "react-dom": "catalog:",
+    "storybook": "^9.0.17"
   }
 }
