--- a/packages/tiles/biome.json
+++ b/packages/tiles/biome.json
@@ -1,11 +1,12 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-  "extends": ["../../biome.json"],
+  "$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
+  "extends": "//",
   "linter": {
     "rules": {
       "a11y": {
         "useFocusableInteractive": "off",
-        "noNoninteractiveTabindex": "off"
+        "noNoninteractiveTabindex": "off",
+        "useSemanticElements": "off"
       }
     }
   }
