--- a/packages/tiles/package.json
+++ b/packages/tiles/package.json
@@ -48,10 +48,10 @@
     "@types/culori": "^4.0.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react-swc": "^3.11.0",
+    "@vitejs/plugin-react-swc": "catalog:",
     "chokidar-cli": "^3.0.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "catalog:",
+    "react-dom": "catalog:",
     "rollup": "^4.45.1",
     "rollup-plugin-import-css": "^3.5.8",
     "size-limit": "^11.2.0",
