--- a/packages/token-lab/biome.json
+++ b/packages/token-lab/biome.json
@@ -1,19 +1,19 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-  "extends": ["../../biome.json"],
-  "linter": {
-    "rules": {
-      "a11y": {
-        "useSemanticElements": "off"
-      },
-      "suspicious": {
-        "noArrayIndexKey": "off"
-      }
-    }
-  },
-  "css": {
-    "parser": {
-      "cssModules": true
-    }
-  }
+	"$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
+	"extends": "//",
+	"linter": {
+		"rules": {
+			"a11y": {
+				"useSemanticElements": "off"
+			},
+			"suspicious": {
+				"noArrayIndexKey": "off"
+			}
+		}
+	},
+	"css": {
+		"parser": {
+			"cssModules": true
+		}
+	}
 }
