--- a/packages/token-lab/package.json
+++ b/packages/token-lab/package.json
@@ -56,10 +56,9 @@
   "devDependencies": {
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react-swc": "^3.11.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "vite": "^7.0.5",
+    "@vitejs/plugin-react-swc": "catalog:",
+    "react": "catalog:",
+    "react-dom": "catalog:",
     "vite-plugin-sass-dts": "^1.3.31"
   }
 }
