--- a/www/package.json
+++ b/www/package.json
@@ -21,8 +21,8 @@
     "@terrazzo/use-color": "workspace:^",
     "algoliasearch": "^5.34.0",
     "nanoid": "^5.1.5",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "catalog:",
+    "react-dom": "catalog:",
     "react-instantsearch": "^7.16.1",
     "shiki": "^1.29.2"
   },
@@ -39,7 +39,6 @@
     "remark-directive": "^3.0.1",
     "sharp": "^0.33.5",
     "unist-util-visit": "^5.0.0",
-    "vite": "^7.0.5",
     "vite-plugin-sass-dts": "^1.3.31",
     "vite-tsconfig-paths": "^5.1.4"
   }
