Update deps, fix install instructions (#516)
* Update deps, fix install instructions

* Upgrade Biome to v2

--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -24,12 +24,12 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^12.1.2",
-    "@types/react": "^19.1.1",
-    "@types/react-dom": "^19.1.2",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "rollup": "^4.40.0",
+    "@rollup/plugin-typescript": "^12.1.4",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "react": "catalog:",
+    "react-dom": "catalog:",
+    "rollup": "^4.45.1",
     "rollup-plugin-import-css": "^3.5.8"
   }
 }
