--- a/packages/plugin-vanilla-extract/package.json
+++ b/packages/plugin-vanilla-extract/package.json
@@ -40,20 +40,18 @@
     "@terrazzo/cli": "workspace:^",
     "@terrazzo/plugin-css": "workspace:^"
   },
+  "dependencies": {
+    "scule": "^1.3.0"
+  },
   "devDependencies": {
     "@terrazzo/cli": "workspace:^",
     "@terrazzo/parser": "workspace:^",
-    "@types/react": "^19.1.6",
+    "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@vanilla-extract/css": "^1.17.2",
-    "@vanilla-extract/vite-plugin": "^5.0.3",
+    "@vanilla-extract/css": "^1.17.4",
+    "@vanilla-extract/vite-plugin": "^5.1.0",
     "dtcg-examples": "^0.3.3",
-    "execa": "^9.6.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "vite": "^6.3.5"
-  },
-  "dependencies": {
-    "scule": "^1.3.0"
+    "react": "catalog:",
+    "react-dom": "catalog:"
   }
 }
