--- a/packages/react-color-picker/package.json
+++ b/packages/react-color-picker/package.json
@@ -48,20 +48,20 @@
     "clsx": "^2.1.1"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^12.1.2",
+    "@rollup/plugin-typescript": "^12.1.4",
     "@size-limit/preset-small-lib": "^11.2.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/culori": "^4.0.0",
-    "@types/react": "^19.1.1",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react-swc": "^3.8.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react-swc": "catalog:",
     "chokidar-cli": "^3.0.0",
     "culori": "^4.0.2",
     "jsdom": "^24.1.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "rollup": "^4.40.0",
+    "react": "catalog:",
+    "react-dom": "catalog:",
+    "rollup": "^4.45.1",
     "rollup-plugin-import-css": "^3.5.8",
     "size-limit": "^11.2.0",
     "vitest-axe": "^0.1.0"
