--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -17,10 +17,8 @@
     "culori": "^4.0.2"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^8.6.12",
-    "@storybook/react": "^8.6.12",
-    "@storybook/react-vite": "^8.6.12",
-    "@storybook/test": "^8.6.12",
+    "@storybook/addon-docs": "^9.0.17",
+    "@storybook/react-vite": "^9.0.17",
     "@terrazzo/fonts": "workspace:^",
     "@terrazzo/icons": "workspace:^",
     "@terrazzo/react-color-picker": "workspace:^",
@@ -28,12 +26,11 @@
     "@terrazzo/tokens": "workspace:^",
     "@terrazzo/use-color": "workspace:^",
     "@types/culori": "^4.0.0",
-    "@types/react": "^19.1.3",
-    "@types/react-dom": "^19.1.3",
-    "@vitejs/plugin-react-swc": "^3.9.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "storybook": "^8.6.12",
-    "vite": "^6.3.5"
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react-swc": "catalog:",
+    "react": "catalog:",
+    "react-dom": "catalog:",
+    "storybook": "^9.0.17"
   }
 }
