fix: Rework rolldown -w scripts to avoid arg parsing error on bash shell

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -37,7 +37,7 @@
   },
   "scripts": {
     "build": "rolldown -c && attw --profile esm-only --pack . && vite build",
-    "dev": "rolldown -c -w",
+    "dev": "rolldown -w -c",
     "format": "biome check --fix --unsafe .",
     "lint": "pnpm --filter @terrazzo/cli run \"/^lint:(js|ts)/\"",
     "lint:js": "biome check .",
