--- a/packages/plugin-js/package.json
+++ b/packages/plugin-js/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "build": "rolldown -c && attw --profile esm-only --pack .",
-    "dev": "rolldown -c -w",
+    "dev": "rolldown -w -c",
     "format": "biome check --fix --unsafe .",
     "lint": "pnpm --filter @terrazzo/plugin-js run \"/^lint:(js|ts)/\"",
     "lint:js": "biome check .",
