--- a/packages/plugin-css/package.json
+++ b/packages/plugin-css/package.json
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "build": "rolldown -c && attw --profile esm-only --pack .",
-    "dev": "rolldown -c -w",
+    "dev": "rolldown -w -c",
     "format": "biome check --fix --unsafe .",
     "lint": "pnpm --filter @terrazzo/plugin-css run \"/^lint:(js|ts)/\"",
     "lint:js": "biome check .",
