--- a/packages/plugin-swift/package.json
+++ b/packages/plugin-swift/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "build": "rolldown -c && attw --profile esm-only --pack .",
-    "dev": "rolldown -c -w",
+    "dev": "rolldown -w -c",
     "format": "biome check --fix --unsafe .",
     "lint": "biome check .",
     "test": "vitest run"
