--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@humanwhocodes/momoa": "catalog:",
+    "@terrazzo/json-pointer-parser": "workspace:^",
     "@terrazzo/token-tools": "workspace:^",
     "@types/babel__code-frame": "^7.0.6",
     "@types/culori": "catalog:",
