--- a/packages/debug/package.json
+++ b/packages/debug/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "@terrazzo/cli": "workspace:^",
     "@terrazzo/plugin-css": "workspace:^",
-    "@terrazzo/plugin-token-listing": "workspace:^"
+    "@terrazzo/plugin-token-listing": "workspace:^",
+    "@terrazzo/token-tools": "workspace:^"
   },
   "keywords": [],
   "author": "",
