--- a/packages/debug/package.json
+++ b/packages/debug/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@terrazzo/cli": "workspace:^",
     "@terrazzo/plugin-css": "workspace:^",
+    "@terrazzo/plugin-sass": "workspace:^",
     "@terrazzo/plugin-token-listing": "workspace:^",
     "@terrazzo/token-tools": "workspace:^"
   },
