--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@terrazzo/monorepo",
   "private": true,
   "type": "module",
-  "packageManager": "pnpm@10.12.4",
+  "packageManager": "pnpm@10.15.1",
   "scripts": {
     "build": "turbo run build",
     "build:apps": "turbo run build:app",
@@ -10,6 +10,7 @@
     "inject-license": "node scripts/inject-license.js",
     "dev": "pnpm run -r --parallel --if-present dev",
     "lint": "turbo run lint",
+    "lint:spell": "cspell lint \"packages/**\" \"www/**\"",
     "format": "turbo run format",
     "test": "turbo run test",
     "prepublishOnly": "pnpm run build",
@@ -17,19 +18,20 @@
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.18.2",
-    "@biomejs/biome": "^2.1.4",
+    "@biomejs/biome": "^2.2.4",
     "@changesets/changelog-github": "^0.5.1",
-    "@changesets/cli": "^2.29.5",
-    "@types/node": "^22.17.1",
+    "@changesets/cli": "^2.29.7",
+    "@types/node": "^22.18.1",
+    "cspell": "^9.2.1",
     "execa": "^9.6.0",
     "prettier": "^3.6.2",
-    "rolldown": "1.0.0-beta.28",
-    "rolldown-plugin-dts": "^0.14.3",
-    "strip-ansi": "^7.1.0",
-    "stylelint": "^16.23.1",
+    "rolldown": "1.0.0-beta.37",
+    "rolldown-plugin-dts": "^0.16.2",
+    "strip-ansi": "^7.1.2",
+    "stylelint": "^16.24.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "^6.0.4",
-    "turbo": "^2.5.5",
+    "turbo": "^2.5.6",
     "typescript": "^5.9.2",
     "vite": "catalog:",
     "vitest": "catalog:"
