--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,11 +4,17 @@ packages:
   - '!packages/**/test/**'
 
 catalog:
+  '@humanwhocodes/momoa': ^3.3.9
+  '@types/culori': ^4.0.1
+  '@types/react': ^19.1.12
+  '@types/react-dom': ^19.1.9
   '@vitejs/plugin-react-swc': ^3.11.0
+  culori: ^4.0.2
   react: ^19.1.1
   react-dom: ^19.1.1
   vite: ^7.1.5
   vitest: ^3.2.4
+  yaml-to-momoa: ^0.0.6
 
 onlyBuiltDependencies:
   - '@biomejs/biome'
