--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -42,17 +42,17 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@humanwhocodes/momoa": "^3.3.9",
+    "@humanwhocodes/momoa": "catalog:",
     "@terrazzo/token-tools": "workspace:^",
     "@types/babel__code-frame": "^7.0.6",
-    "@types/culori": "^4.0.1",
-    "culori": "^4.0.2",
+    "@types/culori": "catalog:",
+    "culori": "catalog:",
     "merge-anything": "^5.1.7",
     "picocolors": "^1.1.1",
     "scule": "^1.3.0",
     "wildcard-match": "^5.1.4"
   },
   "devDependencies": {
-    "yaml-to-momoa": "^0.0.3"
+    "yaml-to-momoa": "catalog:"
   }
 }
