--- a/packages/react-color-picker/package.json
+++ b/packages/react-color-picker/package.json
@@ -52,12 +52,12 @@
     "@size-limit/preset-small-lib": "^11.2.0",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
-    "@types/culori": "^4.0.1",
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
+    "@types/culori": "catalog:",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
     "@vitejs/plugin-react-swc": "catalog:",
     "chokidar-cli": "^3.0.0",
-    "culori": "^4.0.2",
+    "culori": "catalog:",
     "jsdom": "^24.1.3",
     "react": "catalog:",
     "react-dom": "catalog:",
