--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -13,9 +13,6 @@
     "lint:css": "stylelint \"src/**/*.css\"",
     "sb": "storybook dev -p 9009"
   },
-  "dependencies": {
-    "culori": "^4.0.2"
-  },
   "devDependencies": {
     "@storybook/addon-docs": "^9.1.5",
     "@storybook/react-vite": "^9.1.5",
@@ -25,10 +22,11 @@
     "@terrazzo/tiles": "workspace:^",
     "@terrazzo/tokens": "workspace:^",
     "@terrazzo/use-color": "workspace:^",
-    "@types/culori": "^4.0.1",
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
+    "@types/culori": "catalog:",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
     "@vitejs/plugin-react-swc": "catalog:",
+    "culori": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
     "storybook": "^9.1.5"
