--- a/packages/tiles/package.json
+++ b/packages/tiles/package.json
@@ -39,15 +39,15 @@
     "@terrazzo/use-color": "workspace:^",
     "@use-gesture/react": "^10.3.1",
     "clsx": "^2.1.1",
-    "culori": "^4.0.2",
+    "culori": "catalog:",
     "shiki": "^1.29.2"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^12.1.4",
     "@size-limit/preset-small-lib": "^11.2.0",
-    "@types/culori": "^4.0.1",
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
+    "@types/culori": "catalog:",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
     "@vitejs/plugin-react-swc": "catalog:",
     "chokidar-cli": "^3.0.0",
     "react": "catalog:",
