--- a/packages/token-tools/package.json
+++ b/packages/token-tools/package.json
@@ -44,11 +44,11 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@humanwhocodes/momoa": "^3.3.9",
-    "culori": "^4.0.2",
+    "@humanwhocodes/momoa": "catalog:",
+    "culori": "catalog:",
     "wildcard-match": "^5.1.4"
   },
   "devDependencies": {
-    "@types/culori": "^4.0.1"
+    "@types/culori": "catalog:"
   }
 }
