--- a/www/package.json
+++ b/www/package.json
@@ -31,8 +31,8 @@
     "@astrojs/react": "4.1.2",
     "@astrojs/sitemap": "^3.5.1",
     "@terrazzo/storybook": "workspace:^",
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
     "astro": "^5.13.7",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
