--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@biomejs/biome": "^2.2.4",
     "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.29.7",
-    "@types/node": "^22.18.1",
+    "@types/node": "^22.18.3",
+    "@vitest/browser": "catalog:",
     "cspell": "^9.2.1",
     "execa": "^9.6.0",
+    "playwright": "^1.55.0",
     "prettier": "^3.6.2",
     "rolldown": "1.0.0-beta.37",
-    "rolldown-plugin-dts": "^0.16.2",
+    "rolldown-plugin-dts": "^0.16.5",
     "strip-ansi": "^7.1.2",
     "stylelint": "^16.24.0",
     "stylelint-config-standard": "^36.0.1",
