--- a/packages/plugin-css/package.json
+++ b/packages/plugin-css/package.json
@@ -45,6 +45,6 @@
   "devDependencies": {
     "@terrazzo/cli": "workspace:^",
     "@terrazzo/parser": "workspace:^",
-    "dtcg-examples": "^0.3.3"
+    "dtcg-examples": "catalog:"
   }
 }
