--- a/packages/plugin-js/package.json
+++ b/packages/plugin-js/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@terrazzo/cli": "workspace:^",
-    "@terrazzo/parser": "workspace:^"
+    "@terrazzo/parser": "workspace:^",
+    "dtcg-examples": "catalog:"
   }
 }
