--- a/packages/plugin-vanilla-extract/package.json
+++ b/packages/plugin-vanilla-extract/package.json
@@ -50,7 +50,7 @@
     "@types/react-dom": "catalog:",
     "@vanilla-extract/css": "^1.17.4",
     "@vanilla-extract/vite-plugin": "^5.1.1",
-    "dtcg-examples": "^0.3.3",
+    "dtcg-examples": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:"
   }
