--- a/packages/token-lab/package.json
+++ b/packages/token-lab/package.json
@@ -49,7 +49,7 @@
     "@terrazzo/token-tools": "workspace:^",
     "@terrazzo/use-color": "workspace:^",
     "clsx": "^2.1.1",
-    "dtcg-examples": "^0.3.3",
+    "dtcg-examples": "catalog:",
     "jotai": "^2.14.0",
     "monaco-editor": "^0.52.2"
   },
