WIP: need to dedupe some UTs and finish cleaning up

--- a/packages/debug/package.json
+++ b/packages/debug/package.json
@@ -12,6 +12,7 @@
     "@terrazzo/plugin-css": "workspace:^",
     "@terrazzo/plugin-sass": "workspace:^",
     "@terrazzo/plugin-token-listing": "workspace:^",
+    "@terrazzo/token-diff": "workspace:^",
     "@terrazzo/token-tools": "workspace:^"
   },
   "keywords": [],
