--- a/packages/token-diff/package.json
+++ b/packages/token-diff/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@types/culori": "^4.0.0",
-    "@terrazzo/plugin-token-listing": "workspace:^"
+    "@terrazzo/plugin-token-listing": "workspace:^",
+    "@terrazzo/token-tools": "workspace:^"
   }
 }
