--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -47,7 +47,8 @@
   "dependencies": {
     "@clack/prompts": "^0.11.0",
     "@hono/node-server": "^1.19.3",
-    "@humanwhocodes/momoa": "^3.3.9",
+    "@humanwhocodes/momoa": "catalog:",
+    "@terrazzo/json-schema-tools": "workspace:^",
     "@terrazzo/parser": "workspace:^",
     "@terrazzo/token-tools": "workspace:^",
     "@types/escodegen": "^0.0.10",
