--- a/packages/json-schema-tools/package.json
+++ b/packages/json-schema-tools/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "@terrazzo/json-ref-parser",
+  "name": "@terrazzo/json-schema-tools",
   "version": "0.0.1",
-  "description": "Itty-bitty utility to parse JSON pointers (RFC 6901). No resolving, no dereferencing, no CLI. Universal ESM.",
+  "description": "Bundle JSON Schema documents and tools for resolving $refs.",
   "type": "module",
   "keywords": [
     "json",
+    "json schema",
     "pointer",
     "ref",
     "rfc",
@@ -26,19 +27,26 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/terrazzoapp/terrazzo.git",
-    "directory": "./packages/json-schema-ref-parser/"
+    "directory": "./packages/json-schema-tools/"
   },
   "license": "MIT",
   "scripts": {
     "build": "rolldown -c && attw --profile esm-only --pack .",
     "bench": "vitest bench",
-    "dev": "pnpm run build --watch",
-    "lint": "pnpm --filter @terrazzo/parser run \"/^lint:(js|ts)/\"",
+    "dev": "rolldown --watch -c",
+    "lint": "pnpm --filter @terrazzo/json-schema-tools run \"/^lint:(js|ts)/\"",
     "lint:js": "biome check .",
     "lint:ts": "tsc --noEmit",
     "test": "vitest run"
   },
+  "peerDependencies": {
+    "@humanwhocodes/momoa": "^3.0.0"
+  },
+  "dependencies": {
+    "@humanwhocodes/momoa": "catalog:"
+  },
   "devDependencies": {
-    "@apidevtools/json-schema-ref-parser": "^11.9.3"
+    "@apidevtools/json-schema-ref-parser": "^11.9.3",
+    "yaml-to-momoa": "catalog:"
   }
 }
