--- a/packages/plugin-token-listing/biome.json
+++ b/packages/plugin-token-listing/biome.json
@@ -1,7 +1,7 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-  "extends": ["../../biome.json"],
+  "$schema": "https://biomejs.dev/schemas/2.2.4/schema.json",
+  "extends": "//",
   "files": {
-    "include": ["./src/", "./test/*.test.*"]
+    "includes": ["src/**", "test/**/*.test.*"]
   }
 }
