--- a/packages/plugin-js/package.json
+++ b/packages/plugin-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@terrazzo/plugin-js",
-  "version": "0.10.3",
+  "version": "2.0.0-alpha.0",
   "description": "Generate JS, TS, and JSON from your DTCG design tokens JSON.",
   "license": "MIT",
   "type": "module",
