--- a/packages/plugin-sass/package.json
+++ b/packages/plugin-sass/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@terrazzo/plugin-sass",
-  "version": "0.10.4",
+  "version": "2.0.0-alpha.0",
   "description": "Generate .scss from your DTCG design tokens JSON.",
   "license": "MIT",
   "type": "module",
