--- a/packages/token-tools/package.json
+++ b/packages/token-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@terrazzo/token-tools",
-  "version": "0.10.3",
+  "version": "2.0.0-alpha.0",
   "description": "Various utilities for token types",
   "license": "MIT",
   "type": "module",
