style: Update Biome config and relint repo

--- a/packages/plugin-vanilla-extract/biome.json
+++ b/packages/plugin-vanilla-extract/biome.json
@@ -1,7 +1,8 @@
 {
+  "root": false,
   "$schema": "https://biomejs.dev/schemas/2.2.5/schema.json",
   "extends": "//",
   "files": {
-    "includes": ["src/**", "test/**/*.test.*", "!test/fixtures/**"]
+    "includes": ["src/**", "test/**/*.test.*", "!test/fixtures"]
   }
 }
