--- a/packages/plugin-token-listing/biome.json
+++ b/packages/plugin-token-listing/biome.json
@@ -1,7 +1,8 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.2.4/schema.json",
+  "root": false,
+  "$schema": "https://biomejs.dev/schemas/2.2.5/schema.json",
   "extends": "//",
   "files": {
-    "includes": ["src/**", "test/**/*.test.*"]
+    "includes": ["src/**", "test/**/*.test.*", "!test/fixtures"]
   }
 }
