--- a/packages/token-tools/package.json
+++ b/packages/token-tools/package.json
@@ -32,6 +32,7 @@
     ".": "./dist/index.js",
     "./css": "./dist/css.js",
     "./js": "./dist/js.js",
+    "./listing": "./dist/listing.js",
     "./package.json": "./package.json"
   },
   "scripts": {
