--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -63,8 +63,20 @@
     "yaml-to-momoa": "catalog:"
   },
   "devDependencies": {
+    "@swc/core": "catalog:",
+    "@swc/core-darwin-arm64": "catalog:",
+    "@swc/core-darwin-x64": "catalog:",
+    "@swc/core-linux-arm64-gnu": "catalog:",
+    "@swc/core-linux-arm64-musl": "catalog:",
+    "@swc/core-linux-arm-gnueabihf": "catalog:",
+    "@swc/core-linux-x64-gnu": "catalog:",
+    "@swc/core-linux-x64-musl": "catalog:",
+    "@swc/core-win32-arm64-msvc": "catalog:",
+    "@swc/core-win32-ia32-msvc": "catalog:",
+    "@swc/core-win32-x64-msvc": "catalog:",
     "@vitejs/plugin-react-swc": "catalog:",
     "react": "catalog:",
-    "react-dom": "catalog:"
+    "react-dom": "catalog:",
+    "vite": "catalog:"
   }
 }
