--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -36,6 +36,7 @@
   "scripts": {
     "build": "rolldown -c && attw --profile esm-only --pack .",
     "dev": "rolldown -w -c",
+    "format": "biome check --fix --unsafe .",
     "lint": "pnpm --filter @terrazzo/parser run \"/^lint:(js|ts)/\"",
     "lint:js": "biome check .",
     "lint:ts": "tsc --noEmit",
