--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.2.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.3.8/schema.json",
   "vcs": {
     "enabled": true,
     "clientKind": "git",
@@ -28,7 +28,7 @@
         "useArrowFunction": "off"
       },
       "correctness": {
-        "useImportExtensions": "error",
+        "useImportExtensions": "off",
         "useExhaustiveDependencies": "off"
       },
       "style": {
@@ -45,6 +45,7 @@
         "noDuplicateProperties": "off",
         "noFallthroughSwitchClause": "error",
         "noExplicitAny": "warn",
+        "noNonNullAssertedOptionalChain": "warn",
         "noShadowRestrictedNames": "error",
         "useGuardForIn": "error"
       },
