Add yaml-to-momoa as optional peer dep where referenced

--- a/packages/json-schema-tools/package.json
+++ b/packages/json-schema-tools/package.json
@@ -40,7 +40,13 @@
     "test": "vitest run"
   },
   "peerDependencies": {
-    "@humanwhocodes/momoa": "^3.0.0"
+    "@humanwhocodes/momoa": "^3.0.0",
+    "yaml-to-momoa": "catalog:"
+  },
+  "peerDependenciesMeta": {
+    "yaml-to-momoa": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@apidevtools/json-schema-ref-parser": "^11.9.3",
