--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -54,6 +54,14 @@
     "scule": "^1.3.0",
     "wildcard-match": "^5.1.4"
   },
+  "peerDependencies": {
+    "yaml-to-momoa": "catalog:"
+  },
+  "peerDependenciesMeta": {
+    "yaml-to-momoa": {
+      "optional": true
+    }
+  },
   "devDependencies": {
     "yaml-to-momoa": "catalog:"
   }
