Backport declaration sorting

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -48,8 +48,8 @@
     "@clack/prompts": "^0.9.1",
     "@hono/node-server": "^1.19.6",
     "@humanwhocodes/momoa": "^3.3.10",
-    "@terrazzo/parser": "workspace:",
-    "@terrazzo/token-tools": "workspace:",
+    "@terrazzo/parser": "workspace:^",
+    "@terrazzo/token-tools": "workspace:^",
     "@types/escodegen": "^0.0.10",
     "chokidar": "^3.6.0",
     "detect-package-manager": "^3.0.2",
