Fix plugin-js bug, lint

--- a/packages/plugin-js/package.json
+++ b/packages/plugin-js/package.json
@@ -40,7 +40,8 @@
     "@terrazzo/cli": "workspace:^"
   },
   "dependencies": {
-    "@terrazzo/parser": "workspace:^"
+    "@terrazzo/parser": "workspace:^",
+    "scule": "^1.3.0"
   },
   "devDependencies": {
     "@terrazzo/cli": "workspace:^"
