--- a/packages/plugin-css-in-js/package.json
+++ b/packages/plugin-css-in-js/package.json
@@ -48,10 +48,12 @@
     "@terrazzo/cli": "workspace:^",
     "@terrazzo/plugin-css": "workspace:^"
   },
+  "dependencies": {
+    "scule": "^1.3.0"
+  },
   "devDependencies": {
     "@terrazzo/cli": "workspace:^",
     "@terrazzo/parser": "workspace:^",
-    "@terrazzo/plugin-css": "workspace:^",
-    "scule": "^1.3.0"
+    "@terrazzo/plugin-css": "workspace:^"
   }
 }
